crates/biome_yaml_formatter/tests/specs/prettier/yaml/document/end-mark-2.yml.snap
---
source: crates/biome_formatter_test/src/snapshot_builder.rs
info: yaml/document/end-mark-2.yml
---

# Input

```yml
---
key: value
...
---
xxxxxxxx

```


# Error
```text
reformat: formatter output had syntax errors where input had none:
end-mark-2.yml:3:4 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected token.
  
    1 │ ---
    2 │ key: value
  > 3 │ ...---
      │    ^^^
  > 4 │ xxxxxxxx
  > 5 │ 
      │ 
  

```
